adicionando informações a seção do usuário

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
   </head>
   <body>
     <div class="app">
-      <section class="card">user</section>
+      <section class="card user">
+        <picture>
+          <img src="./assets/me.jpeg" alt="Foto de Perfil" />
+        </picture>
+
+        <div class="user__content">
+          <h1>Roberto Santos</h1>
+
+          <p>Desenvolvedor Frontend</p>
+        </div>
+      </section>
+
       <section class="card">about</section>
+
       <section class="card projects">projects</section>
     </div>
   </body>
