adicionando link e a seção sobre

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roberto Santos</title>
 
-    <link rel="stylesheet" href="https://fonts.gstatic.com" />
+    __link rel="stylesheet" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="./styles/global.css" />
+
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body>
     <div class="app">
@@ -24,10 +26,65 @@
           <h1>Roberto Santos</h1>
 
           <p>Desenvolvedor Frontend</p>
+
+          <div class="social">
+            <a
+              href="https://www.linkedin.com/in/roberto-santos-1727a5232/"
+              class="social__link"
+              target="_blank"
+            >
+              <i class="ph ph-linkedin-logo"></i>
+            </a>
+            <a
+              href="https://github.com/SantosRobertin"
+              class="social__link"
+              target="_blank"
+            >
+              <i class="ph ph-github-logo"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/betox.dev/"
+              class="social__link"
+              target="_blank"
+            >
+              <i class="ph ph-instagram-logo"></i>
+            </a>
+            <a
+              href="https://twitter.com/SantosRobertin"
+              class="social__link"
+              target="_blank"
+            >
+              <i class="ph ph-twitter-logo"></i>
+            </a>
+          </div>
         </div>
       </section>
 
-      <section class="card">about</section>
+      <section class="card about">
+        <h2 class="subtitle">Sobre</h2>
+        <p>
+          Desenvolvedor Front-end, sem experiência na área da programação. Por
+          mais que o meu primeiro contato com a programação tenha sido com a
+          linguagem Python e estudando um pouco de Back-end em 2019, no inicio
+          do ano de 2022 após dar início ao curso de Análise e Desenvolvimento
+          de Sistemas, decidi focar exclusivamente no Front-end.
+        </p>
+
+        <p>
+          Desde o dia que tomei a decisão, estudo diariamente para conseguir a
+          minha primeira oportunidade. Com isso, continuo estudando, aprendendo
+          e colocando em pratica as linguagens que possuo conhecimento em mini
+          projetos que hospedo no GitHub. Possuo foco em desenvolvimento com
+          HTML, CSS, JavaScript e React(estudando) e outras tecnologias que
+          estou estudando para criar aplicações web de alto nível e valor.
+        </p>
+
+        <p>
+          Me considero focado e determinado para entrar na profissão, mesmo que
+          seja preciso aprender uma nova linguagem e se adaptar às mudanças,
+          estou pronto para superar qualquer desafio! :)
+        </p>
+      </section>
 
       <section class="card projects">projects</section>
     </div>
