ultimas alterações e integração com  a lib AOS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roberto Santos</title>
 
-    __link rel="stylesheet" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
       rel="stylesheet"
@@ -14,10 +14,18 @@
     <link rel="stylesheet" href="./styles/global.css" />
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
+    <!-- Script AOS - Animações -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
   <body>
     <div class="app">
-      <section class="card user">
+      <section class="card user"
+      data-aos="fade-right"
+      data-aos-duration="800"
+      data-aos-easing="ease-in-out"
+      >
         <picture>
           <img src="./assets/me.jpeg" alt="Foto de Perfil" />
         </picture>
@@ -60,7 +68,11 @@
         </div>
       </section>
 
-      <section class="card about">
+      <section class="card about"
+      data-aos="fade-left"
+      data-aos-duration="800"
+      data-aos-easing="ease-in-out"
+      >
         <h2 class="subtitle">Sobre</h2>
         <p>
           Desenvolvedor Front-end, sem experiência na área da programação. Por
@@ -86,7 +98,25 @@
         </p>
       </section>
 
-      <section class="card projects">projects</section>
+      <section class="card projects"
+      data-aos="fade-up"
+      data-aos-duration="800"
+      data-aos-easing="ease-in-out"
+      >
+        <h2 class="subtitle">Projetos</h2>
+
+        <div id="project__content">
+          
+        </div>
+      </section>
     </div>
+
+    <script src="./scripts/index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init({ once: true })
+    </script>
+
   </body>
 </html>
