corrigindo tags de SEO

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     />
     <meta
       property="og:image"
-      content="hhttps://portfolio-betoxdev.netlify.app/assets/port-img.jpg"
+      content="https://portfolio-betoxdev.netlify.app/assets/port-img.jpg"
     />
 
     <!-- Twitter -->
@@ -57,7 +57,7 @@
     />
     <meta
       property="twitter:image"
-      content="hhttps://portfolio-betoxdev.netlify.app/assets/port-img.jpg"
+      content="https://portfolio-betoxdev.netlify.app/assets/port-img.jpg"
     />
   </head>
   <body>
