melhorias de acessibilidade e reduzindo o tamanho das imagens

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
           <div class="social">
             <a
+              title="link para a rede social linkedin"
+              aria-label="link para a rede social linkedin"
               href="https://www.linkedin.com/in/roberto-santos-1727a5232/"
               class="social__link"
               target="_blank"
@@ -86,6 +88,8 @@
               <i class="ph ph-linkedin-logo"></i>
             </a>
             <a
+              title="link para a rede social github"
+              aria-label="link para a rede social github"
               href="https://github.com/SantosRobertin"
               class="social__link"
               target="_blank"
@@ -93,6 +97,8 @@
               <i class="ph ph-github-logo"></i>
             </a>
             <a
+              title="link para a rede social instagram"
+              aria-label="link para a rede social instagram"
               href="https://www.instagram.com/betox.dev/"
               class="social__link"
               target="_blank"
@@ -100,6 +106,8 @@
               <i class="ph ph-instagram-logo"></i>
             </a>
             <a
+              title="link para a rede social twitter"
+              aria-label="link para a rede social twitter"
               href="https://twitter.com/SantosRobertin"
               class="social__link"
               target="_blank"
