''update de projetos''

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="user__content">
           <h1>Roberto Santos</h1>
 
-          <p>Desenvolvedor Frontend</p>
+          <p>Desenvolvedor</p>
 
           <div class="social">
             <a
@@ -99,20 +99,20 @@
             <a
               title="link para a rede social instagram"
               aria-label="link para a rede social instagram"
-              href="https://www.instagram.com/betox.dev/"
+              href="https://www.instagram.com/betox.santos/"
               class="social__link"
               target="_blank"
             >
               <i class="ph ph-instagram-logo"></i>
             </a>
-            <a
+            <!--<a
               title="link para a rede social twitter"
               aria-label="link para a rede social twitter"
               href="https://twitter.com/SantosRobertin"
               class="social__link"
               target="_blank"
             >
-              <i class="ph ph-twitter-logo"></i>
+              <i class="ph ph-twitter-logo"></i><!-->
             </a>
           </div>
         </div>
@@ -126,26 +126,35 @@
       >
         <h2 class="subtitle">Sobre</h2>
         <p>
-          Desenvolvedor Front-end, sem experiência na área da programação. Por
-          mais que o meu primeiro contato com a programação tenha sido com a
-          linguagem Python e estudando um pouco de Back-end em 2019, no inicio
-          do ano de 2022 após dar início ao curso de Análise e Desenvolvimento
-          de Sistemas, decidi focar exclusivamente no Front-end.
+          Olá! Meu nome é Roberto e estou cursando Análise e Desenvolvimento de
+          Sistemas, com previsão de formatura em dezembro de 2025. Sou
+          apaixonado por tecnologia e estou sempre em busca de soluções
+          criativas para os desafios que enfrento.
         </p>
 
         <p>
-          Desde o dia que tomei a decisão, estudo diariamente para conseguir a
-          minha primeira oportunidade. Com isso, continuo estudando, aprendendo
-          e colocando em pratica as linguagens que possuo conhecimento em mini
-          projetos que hospedo no GitHub. Possuo foco em desenvolvimento com
-          HTML, CSS, JavaScript e React(estudando) e outras tecnologias que
-          estou estudando para criar aplicações web de alto nível e valor.
+          Minha paixão pela tecnologia começou muito antes de iniciar meus
+          estudos na área de desenvolvimento. Atuando como Técnico em Manutenção
+          de Celulares por mais de cinco anos, gerenciei minha própria empresa.
+          Durante esse período, embora meu foco estivesse no hardware, nunca
+          deixei de estudar programação, especialmente o desenvolvimento
+          front-end. Hoje, possuo conhecimentos sólidos em desenvolvimento web,
+          ainda que não esteja atuando como desenvolvedor profissionalmente.
         </p>
 
         <p>
-          Me considero focado e determinado para entrar na profissão, mesmo que
-          seja preciso aprender uma nova linguagem e se adaptar às mudanças,
-          estou pronto para superar qualquer desafio! :)
+          Atualmente, trabalho como Assistente de Dados. Minhas principais
+          responsabilidades incluem coletar, organizar e analisar dados
+          relevantes, utilizar ferramentas como Power BI para criar
+          visualizações e relatórios informativos, e colaborar com equipes
+          multidisciplinares para otimizar processos e soluções de dados.
+        </p>
+
+        <p>
+          Estou sempre buscando aprender mais e me atualizar nas últimas
+          tendências tecnológicas. Adoro enfrentar desafios e encontrar soluções
+          eficientes. Estou animado para continuar minha jornada na área de
+          tecnologia e contribuir com minha experiência e paixão.
         </p>
       </section>
 
