--- a/index.html
+++ b/index.html
@@ -127,18 +127,16 @@
         <h2 class="subtitle">Sobre</h2>
         <p>
           Olá! Meu nome é Roberto e estou cursando Análise e Desenvolvimento de
-          Sistemas, com previsão de formatura em dezembro de 2025. Sou
-          apaixonado por tecnologia e estou sempre em busca de soluções
+          Sistemas. Sou apaixonado por tecnologia e estou sempre em busca de tecnologias
           criativas para os desafios que enfrento.
         </p>
 
         <p>
           Minha paixão pela tecnologia começou muito antes de iniciar meus
-          estudos na área de desenvolvimento. Atuando como Técnico em Manutenção
-          de Celulares por mais de cinco anos, gerenciei minha própria empresa.
-          Durante esse período, embora meu foco estivesse no hardware, nunca
-          deixei de estudar programação, especialmente o desenvolvimento
-          front-end. Hoje, possuo conhecimentos sólidos em desenvolvimento web,
+          estudos na área de desenvolvimento. Desde criança sempre gostei de Hardware e Software.
+          Trabalhei como Técnico em Manutenção de Celulares (Android/IOS) por cerca de cinco anos, gerencindo minha própria empresa.
+          Durante esse período, comecei o tecnologo em Análise e Desenvolvimento de
+          Sistemas. Hoje, possuo conhecimentos sólidos em desenvolvimento web,
           ainda que não esteja atuando como desenvolvedor profissionalmente.
         </p>
 
