alteracao no campo 'sobre'

--- a/index.html
+++ b/index.html
@@ -125,35 +125,23 @@
         data-aos-easing="ease-in-out"
       >
         <h2 class="subtitle">Sobre</h2>
-        <p>
-          Olá! Meu nome é Roberto e estou cursando Análise e Desenvolvimento de
-          Sistemas. Sou apaixonado por tecnologia e estou sempre em busca de tecnologias
-          criativas para os desafios que enfrento.
-        </p>
 
-        <p>
-          Minha paixão pela tecnologia começou muito antes de iniciar meus
-          estudos na área de desenvolvimento. Desde criança sempre gostei de Hardware e Software.
-          Trabalhei como Técnico em Manutenção de Celulares (Android/IOS) por cerca de cinco anos, gerencindo minha própria empresa.
-          Durante esse período, comecei o tecnologo em Análise e Desenvolvimento de
-          Sistemas. Hoje, possuo conhecimentos sólidos em desenvolvimento web,
-          ainda que não esteja atuando como desenvolvedor profissionalmente.
-        </p>
+          <p>
+            Olá! Meu nome é Roberto e sou um profissional com experiência nas áreas de análise de dados, desenvolvimento de sistemas e gestão administrativa. Ao longo da minha carreira, trabalhei na análise de performance de dados utilizando Power BI, criação de dashboards interativos e no suporte ao CRM, sempre com o objetivo de impulsionar os resultados da instituição.
+          </p>
 
-        <p>
-          Atualmente, trabalho como Assistente de Dados. Minhas principais
-          responsabilidades incluem coletar, organizar e analisar dados
-          relevantes, utilizar ferramentas como Power BI para criar
-          visualizações e relatórios informativos, e colaborar com equipes
-          multidisciplinares para otimizar processos e soluções de dados.
-        </p>
+          <p>
+            Na gestão administrativa, adquiri uma visão ampla, passando por funções ligadas à gestão de projetos, controle de frota e mapeamento de ambientes, além de atividades relacionadas à gestão de fornecedores e análise de mercado.
+          </p> 
 
-        <p>
-          Estou sempre buscando aprender mais e me atualizar nas últimas
-          tendências tecnológicas. Adoro enfrentar desafios e encontrar soluções
-          eficientes. Estou animado para continuar minha jornada na área de
-          tecnologia e contribuir com minha experiência e paixão.
-        </p>
+          <p>
+            Atualmente, estou cursando Análise e Desenvolvimento de Sistemas, com previsão de conclusão em dezembro de 2024. Possuo conhecimento em Desenvolvimento Front-end, além de programação em Python e ferramentas de análise como Power BI. Também estou me dedicando ao estudo da língua inglesa, buscando ampliar minhas competências profissionais.
+          </p>
+
+          <p>
+            Estou sempre em busca de novos desafios e oportunidades para aplicar e expandir meus conhecimentos, contribuindo para o crescimento da empresa e desenvolvendo soluções eficientes e inovadoras.
+          </p>
+
       </section>
 
       <section
