--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
         <h2 class="subtitle">Sobre</h2>
 
           <p>
-            Olá! Meu nome é Roberto e sou um profissional com experiência nas áreas de análise de dados, desenvolvimento de sistemas e gestão administrativa. Ao longo da minha carreira, trabalhei na análise de performance de dados utilizando Power BI, criação de dashboards interativos e no suporte ao CRM, sempre com o objetivo de impulsionar os resultados da instituição.
-          </p>
-
-          <p>
-            Na gestão administrativa, adquiri uma visão ampla, passando por funções ligadas à gestão de projetos, controle de frota e mapeamento de ambientes, além de atividades relacionadas à gestão de fornecedores e análise de mercado.
+            Olá! Meu nome é Roberto e sou um profissional com experiência nas áreas de análise de dados, desenvolvimento de sistemas. Ao longo da minha carreira, trabalhei na análise de performance de dados utilizando Power BI, criação de dashboards interativos e no suporte ao CRM, sempre com o objetivo de impulsionar os resultados da instituição.
           </p> 
 
           <p>
