upload portfolio data-analytics

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         data-aos-easing="ease-in-out"
       >
         <picture>
-          <img src="./assets/me.jpeg" alt="Foto de Perfil" />
+          <img src="./assets/me.PNG" alt="Foto de Perfil" />
         </picture>
 
         <div class="user__content">
           <h1>Roberto Santos</h1>
 
-          <p>Desenvolvedor</p>
+          <p>Analista de Dados</p>
 
           <div class="social">
             <a
@@ -127,16 +127,16 @@
         <h2 class="subtitle">Sobre</h2>
 
           <p>
-            Olá! Meu nome é Roberto e sou um profissional com experiência nas áreas de análise de dados, desenvolvimento de sistemas. Ao longo da minha carreira, trabalhei na análise de performance de dados utilizando Power BI, criação de dashboards interativos e no suporte ao CRM, sempre com o objetivo de impulsionar os resultados da instituição.
-          </p> 
+            Olá! Sou um profissional apaixonado por transformar dados em insights estratégicos e garantir a segurança da informação nas organizações. Minha experiência combina a análise de dados, desenvolvimento de dashboards interativos e suporte a CRMs, sempre com foco em resultados e inovação.</p>
 
-          <p>
-            Atualmente, estou cursando Análise e Desenvolvimento de Sistemas, com previsão de conclusão em dezembro de 2024. Possuo conhecimento em Desenvolvimento Front-end, além de programação em Python e ferramentas de análise como Power BI. Também estou me dedicando ao estudo da língua inglesa, buscando ampliar minhas competências profissionais.
-          </p>
+          <p>💼 Áreas de Expertise:</p>
+          <p>Visualização de Dados com Power BI e SQL
+          <p>Programação em Python para automação e análise de dados</p>
+          <p>Segurança da Informação: Análise de Vulnerabilidades e Gestão de Riscos
+            Gestão de Projetos e Segmentação de Clientes</p>
 
-          <p>
-            Estou sempre em busca de novos desafios e oportunidades para aplicar e expandir meus conhecimentos, contribuindo para o crescimento da empresa e desenvolvendo soluções eficientes e inovadoras.
-          </p>
+          <p>📊 Segurança e Inteligência de Negócios:</p>
+          <p>Atualmente, curso pós-graduação em Segurança da Informação, onde aprofundo meus conhecimentos em auditoria de sistemas, proteção de dados e análise de ameaças cibernéticas. Esse background me permite não apenas gerar insights valiosos por meio de dados, mas também proteger informações críticas e garantir conformidade com boas práticas de segurança.</p>
 
       </section>
 
