--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- Primary Meta Tags -->
-    <title>Roberto Santos - Portfólio</title>
+    <title>Portfólio - Roberto Santos</title>
     <meta name="title" content="Roberto Santos - Portfólio" />
     <meta
       name="description"
